--- a/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
+++ b/client-app/src/app/home/mantenimiento/solicitud-repuesto/add-solicitud/add-solicitud.component.html
@@ -16,7 +16,7 @@
         <p-calendar [(ngModel)]="fechaSolicitud" dateFormat="dd-mm-yy"
                     placeholder="dd-mm-yyyy" tabindex="9"
                     [monthNavigator]="true" [yearNavigator]="true"
-                    yearRange="2000:2030" name="fcompra">
+                    yearRange="2000:2030" name="fsolicitud">
         </p-calendar>
       </div>
     </div>
