--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.css
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.css
@@ -1,15 +1,19 @@
-.form-order-trabajo-label {
+.form-orden-trabajo-label {
   font-weight: bold !important;
 }
 
-.form-order-trabajo-title{
+.form-orden-trabajo-title{
   font-weight: bold !important;
   text-align: center;
 }
 
-.form-order-trabajo-sub-title{
+.form-orden-trabajo-sub-title{
   font-weight: bold !important;
   text-align: left;
+}
+
+.col-label-equipo {
+  text-align: right !important;
 }
 
 .select .select-form-orden-trab {
