--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
@@ -1,25 +1,34 @@
-<h2 class="form-order-trabajo-title">Editar Orden de Trabajo</h2>
+<h2 class="form-orden-trabajo-title">Editar Orden de Trabajo</h2>
+<section class="form-block">
+  <!-- errors -->
+  <div class="alert alert-danger" *ngIf="error">
+    <div class="alert-items">
+      <div class="alert-item static">
+        <div class="alert-icon-wrapper">
+          <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+        </div>
+        <span class="alert-text">{{errorMessage}}</span>
+      </div>
+    </div>
+    <button type="button" class="close" aria-label="Close" (click)="error = false">
+      <clr-icon aria-hidden="true" shape="close"></clr-icon>
+    </button>
+  </div>
+</section>
 <form class="compact" #ordenTrabajoForm="ngForm">
   <section class="form-block">
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-1">
-        <label class="form-order-trabajo-label" for="estado">Estado:</label>
+        <label class="form-orden-trabajo-label" for="estado">Estado:</label>
       </div>
       <div class="col-xs-2">
         <input class="form-control" id="estado"
                name="estado" [(ngModel)]="estado">
       </div>
 
-      <div class="col-xs-1">
-        <label class="form-order-trabajo-label" for="fecha">Fecha:</label>
-      </div>
+      <div class="col-xs-3"></div>
       <div class="col-xs-2">
-        <input class="form-control" id="fecha" placeholder="dd/mm/yyyy"
-               name="fecha" [(ngModel)]="fecha">
-      </div>
-
-      <div class="col-xs-2">
-        <label class="form-order-trabajo-label" for="tipoServicio">Tipo Mantenimiento:</label>
+        <label class="form-orden-trabajo-label" for="tipoServicio">Tipo Mantenimiento:</label>
       </div>
       <div class="col-xs-3">
         <div class="select form-control">
@@ -33,13 +42,23 @@
         </div>
       </div>
     </div>
-
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-1">
+        <label class="form-orden-trabajo-label">Fecha:</label>
+      </div>
+      <p-calendar [(ngModel)]="fecha" dateFormat="dd-mm-yy"
+                  placeholder="dd-mm-yyyy"
+                  [monthNavigator]="true" [yearNavigator]="true"
+                  yearRange="2000:2030" name="fecha">
+      </p-calendar>
+    </div>
+    <br>
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-6">
-        <label class="form-order-trabajo-label">Personal que reporta el problema:</label>
+        <label class="form-orden-trabajo-label">Personal que reporta el problema:</label>
       </div>
       <div class="col-xs-6">
-        <label class="form-order-trabajo-label" for="responsable">Descripción del Problema:</label>
+        <label class="form-orden-trabajo-label" for="responsable">Descripción del Problema:</label>
       </div>
       <div class="col-xs-4">
         <input class="form-control" id="responsable"
@@ -54,13 +73,29 @@
       </div>
     </div>
   </section>
-
+  <hr>
   <!-- información del equipo-->
-  <h4 class="form-order-trabajo-sub-title">Información del Equipo</h4>
+  <h4 class="form-orden-trabajo-sub-title">Información del Equipo</h4>
+  <section class="form-block">
+    <!-- errors -->
+    <div class="alert alert-danger" *ngIf="equipoError">
+      <div class="alert-items">
+        <div class="alert-item static">
+          <div class="alert-icon-wrapper">
+            <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
+          </div>
+          <span class="alert-text">{{equipoErrorMessage}}</span>
+        </div>
+      </div>
+      <button type="button" class="close" aria-label="Close" (click)="equipoError = false">
+        <clr-icon aria-hidden="true" shape="close"></clr-icon>
+      </button>
+    </div>
+  </section>
   <section class="form-block">
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-1">
-        <label class="form-order-trabajo-label" for="nroSerie">N. Serie:</label>
+      <div class="col-xs-1 col-label-equipo">
+        <label class="form-orden-trabajo-label" for="nroSerie">N. Serie:</label>
       </div>
       <div class="col-xs-2">
         <input class="form-control" id="nroSerie"
@@ -69,9 +104,9 @@
                (keyup)="onKeyNroSerie(nroSerie.value)"
                [(ngModel)]="numeroSerie">
       </div>
-
-      <div class="col-xs-2">
-        <label class="form-order-trabajo-label" for="numeroPatrimonial">N. Patrimonial:</label>
+      <div class="col-xs-2"></div>
+      <div class="col-xs-2 col-label-equipo">
+        <label class="form-orden-trabajo-label" for="numeroPatrimonial">N. Patrimonial:</label>
       </div>
       <div class="col-xs-2">
         <input class="form-control" id="numeroPatrimonial"
@@ -80,38 +115,40 @@
                (keyup)="onKeyNroPatrimonial(nroPatrimonial.value)"
                [(ngModel)]="numeroPatrimonial">
       </div>
+    </div>
 
-      <div class="col-xs-1">
-        <label class="form-order-trabajo-label">Tipo:</label>
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-1 col-label-equipo">
+        <label class="form-orden-trabajo-label">Tipo:</label>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-4">
         <label class="form-control">
           {{equipoSeleccionado?.tipoEquipo?.tipo}}
         </label>
       </div>
-    </div>
 
-    <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-1">
-        <label class="form-order-trabajo-label">Modelo:</label>
+      <div class="col-xs-2 col-label-equipo">
+        <label class="form-orden-trabajo-label">Modelo:</label>
       </div>
       <div class="col-xs-2">
         <label class="form-control">
           {{equipoSeleccionado?.modeloEquipo?.modelo}}
         </label>
       </div>
+    </div>
 
-      <div class="col-xs-2">
-        <label class="form-order-trabajo-label">Ubicación:</label>
+    <div class="form-group row flex-items-xs-left">
+      <div class="col-xs-2 col-label-equipo">
+        <label class="form-orden-trabajo-label">Ubicación:</label>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-4">
         <label class="form-control">
           {{equipoSeleccionado?.ubicacion?.bloque}} - {{equipoSeleccionado?.ubicacion?.numeroSala}}
         </label>
       </div>
 
-      <div class="col-xs-2">
-        <label class="form-order-trabajo-label">Contrato:</label>
+      <div class="col-xs-2 col-label-equipo">
+        <label class="form-orden-trabajo-label">Contrato:</label>
       </div>
       <div class="col-xs-2">
         <label class="form-control">
@@ -123,12 +160,12 @@
     <clr-datagrid>
       <clr-dg-action-bar>
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-secondary"
+          <a type="button" class="btn btn-sm btn-secondary"
                   [hidden]="!showAgregarBtn"
                   (click)="onAddEquipo()">
             <clr-icon shape="plus"></clr-icon>
             Agregar
-          </button>
+          </a>
         </div>
       </clr-dg-action-bar>
       <clr-dg-column>Nro. Serie</clr-dg-column>
@@ -146,16 +183,16 @@
         <clr-dg-cell>{{equipo.ubicacion?.numeroSala}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.contrato?.numeroContrato}}</clr-dg-cell>
         <clr-dg-cell>
-          <button class="btn btn-sm btn-warning"
+          <a class="btn btn-sm btn-warning"
                   (click)="onRemoveEquipo(equipo.id)">
             Eliminar
-          </button>
+          </a>
         </clr-dg-cell>
       </clr-dg-row>
     </clr-datagrid>
   </section>
 
-  <h4 class="form-order-trabajo-sub-title">Repuestos Solicitados</h4>
+  <h4 class="form-orden-trabajo-sub-title">Repuestos Solicitados</h4>
   <section class="form-block">
     <!-- errors -->
     <div class="alert alert-danger" *ngIf="repError">
@@ -172,11 +209,11 @@
       </button>
     </div>
   </section>
-
+  <hr>
   <section>
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-2">
-        <label class="form-order-trabajo-label">Solicitud Repuesto:</label>
+        <label class="form-orden-trabajo-label">Solicitud Repuesto:</label>
       </div>
       <div class="col-xs-2">
         <input class="form-control" id="codigoRep"
@@ -184,29 +221,29 @@
                [(ngModel)]="solicitudRepId">
       </div>
       <div class="col-xs-1 col-btn-buscar-solicitud">
-        <button class="btn btn-sm btn-success"
+        <a class="btn btn-sm btn-success"
                 (click)="buscarSolicitudRepuestoById()">
           <clr-icon shape="search"></clr-icon>
-        </button>
+        </a>
       </div>
+      <clr-tooltip>
+        <clr-icon clrTooltipTrigger shape="info-circle" size="24" aria-label="Uniq tooltip 1"></clr-icon>
+        <clr-tooltip-content clrPosition="top-right" clrSize="lg" *clrIfOpen>
+          <span>Buscar una Solicitud de Repuesto</span>
+        </clr-tooltip-content>
+      </clr-tooltip>
     </div>
   </section>
 
   <clr-datagrid>
     <clr-dg-action-bar>
       <div class="btn-group">
-        <button type="button" class="btn btn-sm btn-secondary"
+        <a type="button" class="btn btn-sm btn-secondary"
                 (click)="agregarRepuesto()">
           <clr-icon shape="plus"></clr-icon>
-          Agregar
-        </button>
+          Agregar Repuesto
+        </a>
 
-        <button type="button" class="btn btn-sm btn-secondary"
-                *ngIf="repuestoSeleccionado != null"
-                (click)="editarRepuesto()">
-          <clr-icon shape="plus"></clr-icon>
-          Editar
-        </button>
       </div>
     </clr-dg-action-bar>
     <clr-dg-column>Código</clr-dg-column>
@@ -214,36 +251,38 @@
     <clr-dg-column>Cantidad Adquirida</clr-dg-column>
     <clr-dg-column>Precio</clr-dg-column>
     <clr-dg-column></clr-dg-column>
-    <clr-dg-row *ngFor="let repuesto of repuestos"
-                (click)="selectRepuesto(repuesto)"
-                [class.selectRepuesto]="repuesto === repuestoSeleccionado">
+    <clr-dg-row *ngFor="let repuesto of repuestos">
       <clr-dg-cell>{{repuesto.codigo}}</clr-dg-cell>
       <clr-dg-cell>{{repuesto.descripcionArticulo}}</clr-dg-cell>
       <clr-dg-cell>{{repuesto.cantidadAdquirida}}</clr-dg-cell>
       <clr-dg-cell>{{repuesto.precio}}</clr-dg-cell>
       <clr-dg-cell>
-        <button class="btn btn-sm btn-warning"
+        <a class="btn btn-sm btn-warning"
                 (click)="eliminarRepuesto(repuesto)">
           Eliminar
-        </button>
+        </a>
+        <a type="button" class="btn btn-sm btn-secondary"
+           (click)="editarRepuesto(repuesto)">
+          <clr-icon shape="plus"></clr-icon>
+          Editar
+        </a>
       </clr-dg-cell>
     </clr-dg-row>
   </clr-datagrid>
 
 
   <section class="form-block">
-    <button class="btn btn-sm btn-success"
-            [disabled]="(ordenTrabajoForm.form.invalid )"
-            (click)="onSaveAddOrdenTrabajo">
+    <a class="btn btn-sm btn-success"
+            (click)="onSaveAddOrdenTrabajo()">
       <clr-icon shape="floppy"></clr-icon>
       Save
-    </button>
+    </a>
 
-    <button class="btn btn-sm btn-secondary"
+    <a class="btn btn-sm btn-secondary"
             (click)="goBack()">
       <clr-icon shape="window-close"></clr-icon>
       Cancel
-    </button>
+    </a>
   </section>
 </form>
 
