--- a/client-app/src/app/home/mantenimiento/orden-trabajo/atender-orden-trabajo/atender-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/atender-orden-trabajo/atender-orden-trabajo.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="col-xs-2">
         <label class="form-control" id="fecha" placeholder="dd/mm/yyyy"
-               name="fecha" [(ngModel)]="fecha">
+               name="fecha" [(ngModel)]="fechaArealizarse">
         </label>
       </div>
       <div class="col-xs-2">
