--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.html
@@ -42,11 +42,11 @@
         </div>
       </div>
     </div>
-    <div class="form-group row flex-items-xs-left">
+    <div class="form-group row flex-items-xs-left" *ngIf="tipoServicio == 'PREVENTIVO'">
       <div class="col-xs-1">
         <label class="form-orden-trabajo-label">Fecha:</label>
       </div>
-      <p-calendar [(ngModel)]="fecha" dateFormat="dd-mm-yy"
+      <p-calendar [(ngModel)]="fechaArealizarse" dateFormat="dd-mm-yy"
                   placeholder="dd-mm-yyyy"
                   [monthNavigator]="true" [yearNavigator]="true"
                   yearRange="2000:2030" name="fecha">
@@ -130,7 +130,7 @@
       <div class="col-xs-2 col-label-equipo">
         <label class="form-orden-trabajo-label">Modelo:</label>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-4">
         <label class="form-control">
           {{equipoSeleccionado?.modeloEquipo?.modelo}}
         </label>
@@ -138,7 +138,7 @@
     </div>
 
     <div class="form-group row flex-items-xs-left">
-      <div class="col-xs-2 col-label-equipo">
+      <div class="col-xs-1 col-label-equipo">
         <label class="form-orden-trabajo-label">Ubicación:</label>
       </div>
       <div class="col-xs-4">
@@ -150,7 +150,7 @@
       <div class="col-xs-2 col-label-equipo">
         <label class="form-orden-trabajo-label">Contrato:</label>
       </div>
-      <div class="col-xs-2">
+      <div class="col-xs-4">
         <label class="form-control">
           {{equipoSeleccionado?.contrato?.numeroContrato}}
         </label>
@@ -191,7 +191,7 @@
       </clr-dg-row>
     </clr-datagrid>
   </section>
-
+  <hr>
   <h4 class="form-orden-trabajo-sub-title">Repuestos Solicitados</h4>
   <section class="form-block">
     <!-- errors -->
@@ -209,7 +209,7 @@
       </button>
     </div>
   </section>
-  <hr>
+
   <section>
     <div class="form-group row flex-items-xs-left">
       <div class="col-xs-2">
