Cambios en contrato, equipo y mantenimiento

--- a/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.css
+++ b/client-app/src/app/home/contrato/lista-contrato/lista-contrato.component.css
@@ -8,6 +8,14 @@
   cursor: pointer !important;
 }
 
+.form-contrato-label {
+  font-weight: bold !important;
+}
+
+.col-label-contrato {
+  text-align: right !important;
+}
+
 pre {
   border: 0px solid #ccc !important;
   font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif !important;
