--- a/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
+++ b/client-app/src/app/home/contrato/add-contrato/add-contrato.component.html
@@ -98,21 +98,21 @@
         <label class="form-add-contrato-label required">Fecha Inicio:</label>
       </div>
       <div class="col-xs-2">
-        <p-calendar [(ngModel)]="fechaInicio" dateFormat="dd-mm-yy"
-                    placeholder="dd-mm-yyyy"
-                    [monthNavigator]="true" [yearNavigator]="true"
-                    yearRange="2000:2035" name="finicio">
-        </p-calendar>
+        <clr-date-container>
+          <input type="date" clrDate name="fechaInicio" [(ngModel)]="fechaInicio"
+                 min="2000-01-01" max="2030-12-31">
+        </clr-date-container>
       </div>
+    </div>
+    <div class="form-group row flex-items-xs-left">
       <div class="col-xs-2 col-label-add-contrato">
         <label class="form-add-contrato-label required">Finalización:</label>
       </div>
       <div class="col-xs-2">
-        <p-calendar [(ngModel)]="fechaFin" dateFormat="dd-mm-yy"
-                    placeholder="dd-mm-yyyy"
-                    [monthNavigator]="true" [yearNavigator]="true"
-                    yearRange="2000:2035" name="ffin">
-        </p-calendar>
+        <clr-date-container>
+          <input type="date" clrDate name="fechaFin" [(ngModel)]="fechaFin"
+                 min="2000-01-01" max="2030-12-31">
+        </clr-date-container>
       </div>
     </div>
 
