--- a/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
+++ b/client-app/src/app/home/equipo/lista-equipo/lista-equipo.component.html
@@ -1,5 +1,75 @@
-<form class=" compact">
+<form class="clr-form clr-form-compact">
   <h2 class="form-equipo-title">Equipos</h2>
+  <br>
+  <!--info action-->
+  <div class="alert alert-info alert-sm" *ngIf="info">
+    <div class="alert-items">
+      <div class="alert-item static">
+        <div class="alert-icon-wrapper">
+          <clr-icon class="alert-icon"
+                    shape="check-circle">
+          </clr-icon>
+        </div>
+        <span class="alert-text">
+            {{ infoMessage }}
+          </span>
+      </div>
+    </div>
+  </div>
+
+  <!-- errors -->
+  <div class="alert alert-danger alert-sm" *ngIf="error">
+    <div class="alert-items">
+      <div class="alert-item static">
+        <div class="alert-icon-wrapper">
+          <clr-icon class="alert-icon"
+                    shape="exclamation-circle">
+          </clr-icon>
+        </div>
+        <span class="alert-text">{{errorMessage}}</span>
+      </div>
+    </div>
+    <button type="button" class="close" aria-label="Close"
+            (click)="error = false">
+      <clr-icon aria-hidden="true" shape="close"></clr-icon>
+    </button>
+  </div>
+
+  <br>
+  <div class="clr-row">
+    <div class="clr-col-5">
+      <div class="clr-form-control clr-row">
+        <label for="nroSerie" class="clr-control-label clr-col-10 clr-col-md-3">Nro. Serie:</label>
+        <div class="clr-control-container clr-col-10 clr-col-md-2">
+          <div class="clr-input-wrapper">
+            <input id="nroSerie" class="clr-input"
+                   name="nroContrato" [(ngModel)]="numeroSerie">
+          </div>
+        </div>
+      </div>
+      <div class="clr-form-control clr-row">
+        <label for="nroPatrimonial" class="clr-control-label clr-col-10 clr-col-md-3">Nro. Patrimonial:</label>
+        <div class="clr-control-container clr-col-10 clr-col-md-2">
+          <div class="clr-input-wrapper">
+            <input id="nroPatrimonial" class="clr-input"
+                   name="nroContrato" [(ngModel)]="numeroPatrimonial">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="clr-col-5">
+      <div class="clr-form-control clr-row">
+        <div class="clr-control-container clr-col-10 clr-col-md-4">
+          <button class="btn btn-sm btn-success" (click)="filtrarEquipo()">
+            <clr-icon shape="search"></clr-icon>
+            Buscar
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <hr>
   <section>
     <div>
       <button class="btn btn-sm btn-success"
@@ -14,42 +84,10 @@
         Editar
       </button>
     </div>
-    <!--success action-->
-    <div class="alert alert-success alert-sm" *ngIf="success">
-      <div class="alert-items">
-        <div class="alert-item static">
-          <div class="alert-icon-wrapper">
-            <clr-icon class="alert-icon"
-                      shape="check-circle">
-            </clr-icon>
-          </div>
-          <span class="alert-text">
-            {{ successMessage }}
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <!-- errors -->
-    <div class="alert alert-danger alert-sm" *ngIf="error">
-      <div class="alert-items">
-        <div class="alert-item static">
-          <div class="alert-icon-wrapper">
-            <clr-icon class="alert-icon"
-                      shape="exclamation-circle">
-            </clr-icon>
-          </div>
-          <span class="alert-text">{{errorMessage}}</span>
-        </div>
-      </div>
-      <button type="button" class="close" aria-label="Close"
-              (click)="error = false">
-        <clr-icon aria-hidden="true" shape="close"></clr-icon>
-      </button>
-    </div>
 
     <clr-datagrid [clrDgLoading]="loading">
       <clr-dg-column [clrDgSortBy]="'numeroSerie'">Nro. Serie</clr-dg-column>
+      <clr-dg-column [clrDgSortBy]="'numeroPatrimonial'">Nro. Patrimonial</clr-dg-column>
       <clr-dg-column>Descripción</clr-dg-column>
       <clr-dg-column>Tipo</clr-dg-column>
       <clr-dg-column>Modelo</clr-dg-column>
@@ -60,6 +98,7 @@
       <clr-dg-row *ngFor="let equipo of equipos" (click)="selectEquipo(equipo)"
                   [class.selectEquipo]="equipo === selectedEquipo">
         <clr-dg-cell>{{equipo.numeroSerie}}</clr-dg-cell>
+        <clr-dg-cell>{{equipo.numeroPatrimonial}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.descripcionEquipo}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.tipoEquipo?.tipo}}</clr-dg-cell>
         <clr-dg-cell>{{equipo.modeloEquipo?.modelo}}</clr-dg-cell>
@@ -69,8 +108,7 @@
       </clr-dg-row>
 
       <clr-dg-footer>
-        {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
-        of {{total}} Equipos
+        {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}} de {{total}} Equipos
         <clr-dg-pagination #pagination [clrDgPageSize]="5" [clrDgTotalItems]="total"></clr-dg-pagination>
       </clr-dg-footer>
     </clr-datagrid>
