--- a/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.css
+++ b/client-app/src/app/home/mantenimiento/orden-trabajo/edit-orden-trabajo/edit-orden-trabajo.component.css
@@ -36,3 +36,15 @@
   margin-top: -6px !important;
 }
 
+@media only screen and (max-width: 1250px) {
+  .col-tooltip {
+    margin-left: 0 !important;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .col-tooltip {
+    margin-left: -3% !important;
+  }
+}
+
